--- a/package.json
+++ b/package.json
@@ -4,14 +4,11 @@
     "Thaddee Tyl <thaddee.tyl@gmail.com>",
     "Jan Keromnes <janx@linux.com>"
   ],
-  "name": "camp",
-  "description": "Streamed Web Server with easy Ajax, EventSource, Templating, Static pages; Middleware approach and extensibility.",
-  "version": "17.2.2",
-  "homepage": "http://espadrine.github.com/sc/",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/espadrine/sc.git"
-  },
+  "name": "@shields_io/camp",
+  "description": "Fork of Scoutcamp maintained for Shields",
+  "version": "18.0.0",
+  "homepage": "https://github.com/badges/sc",
+  "repository": "badges/sc",
   "main": "lib/camp.js",
   "scripts": {
     "test": "make test"
